--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -71,41 +71,20 @@
                     <div class="col-xs-6 col-md-4" style="margin-top:15px;">
                         <label>Source</label>
                         <select class="form-select form-control-lg mb-5" id="sourceSelect" style=" height: 48px;">
-                            <option selected>Source</option>
-                            <option value="Singapore">Singapore</option>
-                            <option value="Argentina">Argentina</option>
-                            <option value="Australia">Australia</option>
-                            <option value="Austria">Austria</option>
-                            <option value="Belgium">Belgium</option>
-                            <option value="Bolivia">Bolivia</option>
-                            <option value="Brazil">Brazil</option>
-                            <option value="Canada">Canada</option>
-                            <option value="Chile">Chile</option>
-
+                            <option value="-1">Please Select a Country</option>
                         </select>
                     </div>
 
                     <div class="col-xs-6 col-md-4" style="margin-top: 15px; ">
                         <label>Destination</label>
                         <select class="form-select form-control-lg mb-5" id="destinationSelect" style=" height: 48px;">
-                            <option selected>Destination</option>
-                            <option value="Singapore">Singapore</option>
-                            <option value="Argentina">Argentina</option>
-                            <option value="Australia">Australia</option>
-                            <option value="Austria">Austria</option>
-                            <option value="Belgium">Belgium</option>
-                            <option value="Bolivia">Bolivia</option>
-                            <option value="Brazil">Brazil</option>
-                            <option value="Canada">Canada</option>
-                            <option value="Chile">Chile</option>
+                            <option value="-1">Please Select a Country</option>
                         </select>
                     </div>
                     <div class="col-xs-6 col-md-4" style="margin-top: 15px; ">
                         <label>Carrier</label>
                         <select class="form-select form-control-lg mb-5" id="carrierSelect" style=" height: 48px;">
-                            <option selected value="0">Carrier</option>
-                            <option value="1">Fedex</option>
-                            <option value="2">DHL</option>
+                            <option value="-1">Please Select a Carrier</option>
                         </select>
                     </div>
 
@@ -122,8 +101,7 @@
                     <div class="col-xs-6 col-md-4">
                         <label>Packaging type</label>
                         <select class="form-select form-control-lg mb-5" id="packagingSelect" style=" height: 48px;">
-                            <option selected value="0">Packaging Type</option>
-
+                            <option value="-1">Please Select a Packaging</option>
                         </select>
                     </div>
                     <div class="col-xs-6 col-md-4">
@@ -255,7 +233,7 @@
 
             var packagingValue = $(this).val();
             var weightElement = $("#weightSelect");
-     
+
             if (packagingValue == '0' || packagingValue == '5') {
                 $('#heightGroup').attr('hidden', false);
                 $('#widthGroup').attr('hidden', false);
@@ -283,7 +261,7 @@
                 weightElement.html(option3);
             }
 
-         
+
 
 
         })
@@ -415,5 +393,51 @@
             }
 
         })
-    })
+    });
+    $(document).ready(function () {       
+        $.ajax({
+            type: "GET",
+            url: "/Utility/GetListCountry",
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Country</option>';
+                for (var i = 0; i < data.data.length; i++) {
+                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                }
+                $("#sourceSelect").html(s);
+                $("#destinationSelect").html(s);
+            }
+        });
+    });
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "/Utility/GetListCarriers",
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Carrier</option>';
+                for (var i = 0; i < data.data.length; i++) {
+                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                }
+                $("#carrierSelect").html(s);
+            }
+        });
+    });
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "/Utility/GetListPackageType",
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Packing</option>';
+                for (var i = 0; i < data.data.length; i++) {
+                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                }
+                $("#packagingSelect").html(s);
+            }
+        });
+    });
 </script>
