--- a/Freight/Views/UploadRate/Index.cshtml
+++ b/Freight/Views/UploadRate/Index.cshtml
@@ -35,6 +35,16 @@
         <section>
             <div style=" font-size:1.5rem">
                 <h3>Upload Rate</h3>
+                <div class="row">
+                    <div class="col-xs-6 col-md-4" style="margin-top: 15px; ">
+                        <label>Carrier</label>
+                        <select class="form-select form-control-lg mb-5" id="carrierSelect" style=" height: 48px;">
+                            <option value="-1">Please Select a Carrier</option>
+                            <option value="-1">DHL</option>
+                            <option value="-1">FedEx</option>
+                        </select>
+                    </div>
+                </div>
                 <div class="row" style="margin-left:0px">
                     <input type="file" name="file" id="file" />
                     <br />
@@ -46,7 +56,7 @@
             </div>
         </section>
         <footer style=" position:absolute;top:100%; font-size:15px;">
-            <label style="font-weight: normal">Copyright Mentor Media, 2020</label>
+            <label style="font-weight: normal">Copyright Mentor Media, 2021</label>
         </footer>
     </div>
 </body>
