--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -32,6 +32,12 @@
                     Surcharge Rate
                 </li>
                 </a>
+                <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
+                <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
+                    <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
+                    User
+                </li>
+                </a>
             </ul>
         </div>
     </div>
@@ -55,21 +61,21 @@
                 </div>
                 <div class="row" hidden id="divMonth">
                     <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
-                        <label class="col-md-12">Month</label>
+                        <label class="col-md-12 row">Month</label>
                         <input class="form-select form-control-lg mb-5 col-md-12" type="text" readonly id="month" placeholder="Month" value="" style="height: 48px;" />
                     </div>
                     <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
-                        <label class="col-md-12">DHL</label>
+                        <label class="col-md-12 row">DHL (%)</label>
                         <input id="tdSelectdhl" value="" hidden />
                         <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="dhl" value="" style="height: 48px;" />
                     </div>
                     <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
-                        <label class="col-md-12">FedEx</label>
+                        <label class="col-md-12 row">FedEx (%)</label>
                         <input id="tdSelectfedex" value="" hidden />
                         <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="fedex" value="" style="height: 48px;" />
                     </div>
                 </div>
-                <div class="row" style="margin-top:20px">
+                <div class="row ml-0" style="margin-top:20px">
                     <button type="button" class="btn btn-primary btn-lg" id="saveButton" hidden>Save Change</button>
                 </div>
                 <div class="row" style="margin-left:0px">
@@ -77,9 +83,9 @@
                         <thead>
                             <tr>
                                 <th>Month</th>
-                                <th>DHL</th>
-                                <th>FedEx</th>
-                                <th>Edit</th>
+                                <th>DHL (%)</th>
+                                <th>FedEx (%)</th>
+                                <th class="record">Edit</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -230,5 +236,13 @@
         $("#month").val("");
         $("#saveButton").attr("hidden", true);
         $("#divMonth").attr("hidden", true);
+    });
+    $("#carrierSelect").change(function () {
+        if ($("#carrierSelect").val() != 2021) {
+            $(".record").css("display", "none");
+        }
+        else {
+            $(".record").css("display", "block");
+        }
     });
 </script>
