fix message return

--- a/Freight/Views/Home/SignUp.cshtml
+++ b/Freight/Views/Home/SignUp.cshtml
@@ -36,6 +36,6 @@
         window.location.href = "/About";
     })
     $("#signup").click(function () {
-        alert("Your account waiting active. Administrator will approve it then you received an email.");
+        alert("Thank you for registering at the Mentor Media Hub portal.We will send you an activation email upon your request is approved.");
     })
 </script>
